external-crates/move/crates/move-compiler/tests/move_check/parser/unknown_ability_name_function_constraint.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/unknown_ability_name_function_constraint.move:4:16
  │
4 │     fun foo<T: blah>() {}
  │                ^^^^ Unexpected 'blah'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'
